--- a/Angular/SocialNetwork/src/app/login-page/login-page.component.html
+++ b/Angular/SocialNetwork/src/app/login-page/login-page.component.html
@@ -1,6 +1,7 @@
-<div class="bg-secondary container">
+
+<div class="container">
   <div class="row pt-5 pb-5">
-    <h1 class="h1 col-3">Squawker</h1>
+    <h1 class="h1 col-3">🆂🆀🆄🅰🆆🅺🅴🆁</h1>
     <div class="col-3"></div>
     <div class="col-6 m-0 text-right">
       <form
@@ -33,7 +34,7 @@
         </div>
         <div class="">
           <input
-            class="inLine form-control btn btn-primary"
+            class="d-block btn btn-outline-light"
             [disabled]="!loginForm.valid"
             type="submit"
             value="submit"
@@ -45,7 +46,7 @@
         *ngIf="passwordReset"
       ></password-reset>
       <a *ngIf="!passwordReset" (click)="togglePasswordReset()"
-        >Reset Password</a
+        >🆁🅴🆂🅴🆃 🅿🅰🆂🆂🆆🅾🆁🅳</a
       >
       <a *ngIf="passwordReset" (click)="togglePasswordReset()">Back to login</a>
     </div>
@@ -57,7 +58,7 @@
       <about-us></about-us>
     </div>
     <div class="col-6">
-      <h3 class="pt-3 pb-3">Sign up</h3>
+      <h3 class="pt-3 pb-3">🆂🅸🅶🅽 🆄🅿</h3>
       <form
         #registerForm="ngForm"
         (submit)="submitRegisteration(registerForm.value)"
