--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -5,7 +5,7 @@
         <img class="thelogo" src="../../assets/img/RevatureSquawk.jpg" />
       </div>
       <div class="col-7 text-right">
-        <a class="text-info" (click)="onLogout()" href="#">logout</a>
+        <a class="text-info" (click)="onLogout()" href="#">🅻🅾🅶🅾🆄🆃</a>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="tabBody" *ngIf="view == 'SearchNetwork'">
         <div *ngIf="tab == 'all'">
-          <h4 class="text-center">Scroll through our friends</h4>
+          <h4 class="text-center">🆂🅲🆁🅾🅻🅻 🆃🅷🆁🅾🆄🅶🅷 🅾🆄🆁 🅵🆁🅸🅴🅽🅳🆂</h4>
           <div class="scrollList">
             <div *ngFor="let item of users">
               <button
