--- a/Angular/SocialNetwork/src/app/post-form/post-form.component.html
+++ b/Angular/SocialNetwork/src/app/post-form/post-form.component.html
@@ -1,5 +1,5 @@
 <div class="border rounded">
-  <div class="ht1 color1">Create a new Squawk</div>
+  <div class="ht1 color1">🅲🆁🅴🅰🆃🅴 🅰 🅽🅴🆆 🆂🆀🆄🅰🆆🅺</div>
   <user-content-input-form
     (newPost)="pushPost($event)"
     [user]="user"
