--- a/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
+++ b/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
@@ -51,5 +51,5 @@
   <br>
   <textarea placeholder="Bio" rows="4" cols="50" id="thebio"></textarea>
   <br>
-  <button type="submit" (click)="updateUserInfo()">Submit Changes</button>
+  <button type="submit" (click)="updateUserInfo()" id="submitthechange">Submit Changes</button>
 </div>
