--- a/Angular/SocialNetwork/src/app/login-page/login-page.component.css
+++ b/Angular/SocialNetwork/src/app/login-page/login-page.component.css
@@ -25,3 +25,17 @@
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+#respass {
+  position: absolute;
+  right: 10%;
+  top: 110%;
+}
+#respass:hover {
+  color: red;
+}
+#respassback:hover {
+  color: blue;
+}
+#squawwwk {
+  color: orange;
+}
