fixed password display and search user bio

--- a/Angular/SocialNetwork/src/app/login-page/login-page.component.html
+++ b/Angular/SocialNetwork/src/app/login-page/login-page.component.html
@@ -28,7 +28,7 @@
             #password="ngModel"
             required
             placeholder="Password"
-            type="pasword"
+            type="password"
             name="password"
           />
         </div>
@@ -81,7 +81,7 @@
             #password="ngModel"
             required
             placeholder="Password"
-            type="pasword"
+            type="password"
             name="password"
           />
         </div>
