--- a/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
+++ b/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
@@ -29,7 +29,7 @@
         <p class="text-center">EMAIL: {{ user.email }}</p>
       </div>
       <div class="row container">
-        <p class="text-center">ABOUT ME: {{ user.aboutMe }}</p>
+        <p class="text-center">ABOUT ME: {{ user.bio }}</p>
       </div>
     </form>
   </div>
