--- a/Angular/SocialNetwork/src/app/password-reset/password-reset.component.html
+++ b/Angular/SocialNetwork/src/app/password-reset/password-reset.component.html
@@ -1,12 +1,12 @@
 <form
   #resetForm="ngForm"
   (submit)="submitReset(resetForm.value)"
-  class="form-inline"
+  class="d-inline-flex"
 >
-  <div class="form-group">
+  <div class="inLine">
     <input
       ngModel
-      class="form-control"
+      class="form-control shadow1"
       #username="ngModel"
       required
       placeholder="Username"
@@ -14,10 +14,10 @@
       name="username"
     />
   </div>
-  <div class="form-group">
+  <div class="inLine">
     <input
       ngModel
-      class="form-control"
+      class="form-control shadow1"
       #passwordOld="ngModel"
       required
       placeholder="Old Password"
@@ -25,10 +25,10 @@
       name="passwordOld"
     />
   </div>
-  <div class="form-group">
+  <div class="inLine">
     <input
       ngModel
-      class="form-control"
+      class="form-control shadow1"
       #passwordNew="ngModel"
       required
       placeholder="New Password"
@@ -36,9 +36,9 @@
       name="passwordNew"
     />
   </div>
-  <div class="form-group">
+  <div class="inLine">
     <input
-      class="form-control btn btn-primary"
+      class="form-control shadow1 btn btn-outline-light"
       [disabled]="!resetForm.valid"
       type="submit"
       value="submit"
