--- a/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
+++ b/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
@@ -1,9 +1,14 @@
 <div class="">
-  <div>
-    <comment-form [post]="post" [user]="user"></comment-form>
+  <div style="padding-top: 10px;">
+    <comment-form
+      style="padding-top: 10px;"
+      [post]="post"
+      [user]="user"
+      (newComment)="pushComment($event)"
+    ></comment-form>
   </div>
 
-  <div class="container" *ngFor="let item of comments">
-    <comment [in]="item"></comment>
+  <div class="row post-borders" *ngFor="let item of comments">
+    <comment class="container" [in]="item"></comment>
   </div>
 </div>
