--- a/Angular/SocialNetwork/src/app/comment/comment.component.html
+++ b/Angular/SocialNetwork/src/app/comment/comment.component.html
@@ -1,6 +1,6 @@
-<div class="row pt-1 pb-1">
+<div class="pt-1 pb-1">
   <div class="row container comment-borders m-auto">
-    <div class="col-2">
+    <div style="padding: 3px; text-align: center;" class="col-2">
       <img
         [src]="'data:image/jpg;base64,' + comment.picLink"
         height="50px"
@@ -9,7 +9,7 @@
       />
     </div>
     <div class="col-10">
-      {{ comment.username }}
+      <b>{{ comment.username }}</b>
       <hr class="m-0 p-0" />
       {{ comment.body }}
     </div>
