--- a/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
+++ b/Angular/SocialNetwork/src/app/update-profile/update-profile.component.html
@@ -27,29 +27,57 @@
           accept="image/*"
           (change)="onFileChanged($event)"
         />
-        <input class="d-block btn btn-outline-light" type="submit" id="btn1" (click)="onUpload()" />
+        <input
+          class="d-block btn btn-outline-light"
+          type="submit"
+          id="btn1"
+          (click)="onUpload()"
+        />
       </form>
     </div>
   </div>
- 
-<div class="UserInfo" id="userrInfo">
-  🅵🅸🆁🆂🆃 🅽🅰🅼🅴 : {{user.firstName}}
-  <br>
-  🅻🅰🆂🆃 🅽🅰🅼🅴 : {{user.lastName}}
-  <br>
-  🆄🆂🅴🆁🅽🅰🅼🅴 : {{user.username}}
-  <br>
-  🅴🅼🅰🅸🅻 : {{user.email}}
-  <br>
-  🅱🅸🅾 : {{user.bio}}
-</div>
-<div class="UpdateInfo" id="updateInfoo">
-  <p>🆄🅿🅳🅰🆃🅴 🆄🆂🅴🆁 🅸🅽🅵🅾🆁🅼🅰🆃🅸🅾🅽</p>
-  <input type="text" placeholder="First Name" id="fName">
-  <br>
-  <input type="text" placeholder="Last Name" id="lName">
-  <br>
-  <textarea placeholder="Bio" rows="4" cols="50" id="thebio"></textarea>
-  <br>
-  <button class="d-block btn btn-outline-light" type="submit" (click)="updateUserInfo()">Submit Changes</button>
+
+  <div class="UserInfo" id="userrInfo">
+    🅵🅸🆁🆂🆃 🅽🅰🅼🅴 : {{ user.firstName }}
+    <br />
+    🅻🅰🆂🆃 🅽🅰🅼🅴 : {{ user.lastName }}
+    <br />
+    🆄🆂🅴🆁🅽🅰🅼🅴 : {{ user.username }}
+    <br />
+    🅴🅼🅰🅸🅻 : {{ user.email }}
+    <br />
+    🅱🅸🅾 : {{ user.bio }}
+  </div>
+  <div class="UpdateInfo" id="updateInfoo">
+    <p>🆄🅿🅳🅰🆃🅴 🆄🆂🅴🆁 🅸🅽🅵🅾🆁🅼🅰🆃🅸🅾🅽</p>
+    <input
+      [(ngModel)]="firstNameValue"
+      type="text"
+      placeholder="First Name"
+      id="fName"
+    />
+    <br />
+    <input
+      [(ngModel)]="lastNameValue"
+      type="text"
+      placeholder="Last Name"
+      id="lName"
+    />
+    <br />
+    <textarea
+      [(ngModel)]="bioValue"
+      placeholder="Bio"
+      rows="4"
+      cols="50"
+      id="thebio"
+    ></textarea>
+    <br />
+    <button
+      class="d-block btn btn-outline-light"
+      type="submit"
+      (click)="updateUserInfo()"
+    >
+      Submit Changes
+    </button>
+  </div>
 </div>
