--- a/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
+++ b/Angular/SocialNetwork/src/app/user-content-input-form/user-content-input-form.component.html
@@ -1,4 +1,4 @@
-<div class="row container pb-2">
+<div class="m-auto row post-borders container">
   <div class="col-3 text-center">
     <div class="text-center p-0 m-0 text-nowrap">
       {{ user.username }}
@@ -12,23 +12,33 @@
     />
   </div>
 
-  <img [src]="imagePreview" height="100px" width="100px" alt="" />
   <div class="col-9">
     <form #f="ngForm" (ngSubmit)="submitForm(f.value)">
-      <textarea
-        ngModel
-        #body="ngModel"
-        class="form-control"
-        [placeholder]="placeholderText"
-        name="body"
-        cols="30"
-        rows="4"
-      ></textarea>
+      <div style="display: flex;">
+        <img
+          style="padding-top: 8px;"
+          *ngIf="imagePreview"
+          [src]="imagePreview"
+          height="100px"
+          width="100px"
+          alt=""
+        />
+        <textarea
+          ngModel
+          #body="ngModel"
+          class="form-control"
+          [placeholder]="placeholderText"
+          [(ngModel)]="textValue"
+          name="body"
+          cols="30"
+          rows="4"
+        ></textarea>
+      </div>
       <div class="container">
         <div class="row">
-          <div class="form-control col-6">
-            <label for="image" class="text-center"
-              >add image
+          <div class="form-control col-6 text-center">
+            <label id="addImage-btn" for="image" class="text-center"
+              >Add image
               <input
                 (change)="onFileChanged($event)"
                 style="display: none;"
