--- a/Angular/SocialNetwork/src/styles.css
+++ b/Angular/SocialNetwork/src/styles.css
@@ -1,4 +1,3 @@
-
 .avatar {
   margin: 10px auto;
   border: 1px solid black;
@@ -28,7 +27,10 @@
 .row {
   flex-wrap: nowrap;
 }
-
+#logout-btn {
+  position: relative;
+  top: 20px;
+}
 #postContainer {
   min-width: 500px;
 }
@@ -36,11 +38,14 @@ textarea {
   width: -webkit-fill-available;
   resize: none;
 }
+#header-bar {
+  border-bottom: 24px solid #80808057;
+}
 .color1 {
-  background-color: gray;
+  background-color: white;
 }
 .color2 {
-  background-color: #dae0e5;
+  background-color: #adb5bd;
 }
 
 .activeTab {
@@ -90,27 +95,40 @@ textarea {
   border: 1px solid lightgray;
   border-radius: 5px;
   margin: -1px;
+  background-color: ghostwhite;
 }
 .comment-borders {
   border: 1px solid lightgray;
   border-radius: 5px;
+  background-color: ghostwhite;
 }
-
+.shadow1 {
+  box-shadow: 2px 2px 5px grey;
+}
+.post-bg1 {
+  background-color: #dae0e5;
+  border-radius: 5px;
+}
+.post-bg2 {
+  background-color: ghostwhite;
+}
+#addImage-btn:hover {
+  cursor: pointer;
+}
 body {
-	background: linear-gradient(-45deg, #90ee52, #7be73c, #235bd5, #2361d5);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+  background: linear-gradient(-45deg, #90ee52, #7be73c, #235bd5, #2361d5);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
-
